--- a/src/server/package.json
+++ b/src/server/package.json
@@ -18,6 +18,7 @@
         "express": "^4.17.1",
         "graphql": "^15.2.0",
         "http": "^0.0.1-security",
-        "mongoose": "^5.9.20"
+        "mongoose": "^5.9.20",
+        "uuidv4": "^6.1.1"
     }
 }
