--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,42 +1,48 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "apollo-boost": "^0.4.9",
-    "apollo-link-ws": "^1.0.20",
-    "apollo-utilities": "^1.3.4",
-    "graphql": "^15.2.0",
-    "react": "^16.13.1",
-    "react-apollo": "^3.1.5",
-    "react-dom": "^16.13.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "subscriptions-transport-ws": "^0.9.16"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "client",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.3.2",
+		"@testing-library/user-event": "^7.1.2",
+		"apollo-boost": "^0.4.9",
+		"apollo-link-ws": "^1.0.20",
+		"apollo-utilities": "^1.3.4",
+		"graphql": "^15.2.0",
+		"react": "^16.13.1",
+		"react-apollo": "^3.1.5",
+		"react-dom": "^16.13.1",
+		"react-router": "^5.2.0",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "3.4.1",
+		"subscriptions-transport-ws": "^0.9.16",
+		"tailwindcss": "^1.4.6"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"css": "npx tailwindcss build ./src/styles/index.css -o ./src/styles.css",
+		"watch:css": "watch 'yarn run css' ./src/styles",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"watch": "^1.0.2"
+	}
 }
