--- a/src/client/package.json
+++ b/src/client/package.json
@@ -10,6 +10,7 @@
 		"apollo-link-ws": "^1.0.20",
 		"apollo-utilities": "^1.3.4",
 		"graphql": "^15.2.0",
+		"http-proxy-middleware": "^1.0.5",
 		"react": "^16.13.1",
 		"react-apollo": "^3.1.5",
 		"react-dom": "^16.13.1",
@@ -44,5 +45,6 @@
 	},
 	"devDependencies": {
 		"watch": "^1.0.2"
-	}
+	},
+	"proxy": "http://localhost:4001"
 }
