--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,24 +1,20 @@
 {
-    "name": "whatdogs",
-    "version": "1.0.0",
-    "main": "index.js",
-    "license": "MIT",
-    "scripts": {
-        "start": "nodemon --exec babel-node index.js"
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.10.3",
-        "@babel/core": "^7.10.3",
-        "@babel/node": "^7.10.3",
-        "@babel/preset-env": "^7.10.3",
-        "nodemon": "^2.0.4"
-    },
-    "dependencies": {
-        "apollo-server-express": "^2.15.0",
-        "express": "^4.17.1",
-        "graphql": "^15.2.0",
-        "http": "^0.0.1-security",
-        "mongoose": "^5.9.20",
-        "uuidv4": "^6.1.1"
-    }
+	"name": "whatdogs",
+	"version": "1.0.0",
+	"main": "index.js",
+	"license": "MIT",
+	"scripts": {
+		"start": "node index.js"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.4"
+	},
+	"dependencies": {
+		"apollo-server-express": "^2.15.0",
+		"express": "^4.17.1",
+		"graphql": "^15.2.0",
+		"http": "^0.0.1-security",
+		"mongoose": "^5.9.20",
+		"uuidv4": "^6.1.1"
+	}
 }
