--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-src/server/node_modules
-src/client/node_modules
-src/server/credentials.js
+server/node_modules
+client/node_modules
+client/.env
+server/credentials.js
