--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "whatdogs",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "server.js",
 	"license": "MIT",
 	"scripts": {
-		"start": "node index.js"
+		"start": "node server.js"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.4"
