--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"apollo-server-express": "^2.15.0",
+		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"graphql": "^15.2.0",
 		"http": "^0.0.1-security",
